[2.1.5]
- Disabled the use of frequency based seed masking when using the linear-time
  search feature with respect to the targets.
- Fixed a bug that caused a `Database file is not a BLAST database` error message
  for the `prepdb` workflow.
- Fixed a bug that caused a segmentation fault when using BLAST databases.
- Added line numbers for error messages when reading taxonomy mapping files.

[2.1.4]
- Leading spaces are now trimmed and tabulator characters escaped as `\t`
  in sequence titles, and a warning message is produced.
- Blank sequence titles are now replaced by `N/A`, and a warning message is
  produced.
- Fixed a bug that could cause a `Traceback error` in certain cases.
- Fixed a bug that caused the `qlen` and `score` output fields not to be reported
  correctly for the `realign` workflow.
- Added an error message when using unsupported output fields for the `realign`
  workflow.
- Fixed an issue that could cause a `Missing fields in input line` error when
  clustering.
- Optimized the performance of the `linclust` workflow.
- Reduced the memory use of the clustering workflow.
- Fixed a bug that caused using standard input as the query not to work.

[2.1.3]
- Fixed compiler errors for GCC 4.8.
- Fixed a GCC compiler error.
- Fixed a segfault issue occuring when compiled using GCC 12 on ARM64 systems.
- Fixed an issue that caused missing support for AVX2.

[2.1.2]
- The iterated search mode (option `--iterate`) now uses a linear-time feature as
  the first search round.
- Added the `linclust` command to cluster using only a single linear-time search
  round.
- Fixed compiler errors on macOS.
- Fixed a bug that caused invalid alignment traceback output for the DAA `view`
  workflow.
- Added the `merge-daa` workflow to merge DAA files.
- Fixed an error when using the `--max-target-seqs/-k` option for the DAA `view`
  workflow.
- Removed AVX2 support from the Windows release binary to ensure compatibility
  with older systems.